Try to solve xmodmap Hyper error

--- a/.ratpoisonrc
+++ b/.ratpoisonrc
@@ -5,6 +5,7 @@ bind c exec lxterminal
 exec xrandr --output DVI-0 --rotate left
 # somehow the configuration in xessionrc doesn't get executed
 exec  xmodmap /home/guru/.xmodmaprc 
+exec xbindkeys &
 
 alias random-wallpaper exec feh --randomize --recursive --bg-scale ~/wp
 definekey top Print random-wallpaper
