--- a/.ratpoisonrc
+++ b/.ratpoisonrc
@@ -16,10 +16,12 @@ definekey top F13 other
 bind f exec /home/guru/bin/rp-run-or-raise.sh Firefox firefox
 #bind b exec /home/guru/bin/rp-run-or-raise.sh Zathura zathura
 
-alias most-recent-book exec /home/guru/bin/rp-run-or-raise.sh Zathura "fasd -e zathura -f pdf"
-bind b most-recent-book
+alias most-frecent-book exec /home/guru/bin/rp-run-or-raise.sh Zathura "fasd -e zathura -f pdf"
+bind b most-frecent-book
 bind e exec /home/guru/bin/rp-run-or-raise.sh jetbrains-studio /opt/android-studio/bin/studio.sh
-bind c exec /home/guru/bin/rp-run-or-raise.sh Lxterminal lxterminal
+#alias term-most-frecent-directory exec /home/guru/bin/rp-run-or-raise.sh Lxterminal 'lxterminal --working-directory="$(fasd -d -n1)"'
+alias term-most-frecent-directory exec /home/guru/bin/rp-run-or-raise.sh Lxterminal lxterminal
+bind c term-most-frecent-directory
 bind C exec Eterm
 
 
