--- a/.ratpoisonrc
+++ b/.ratpoisonrc
@@ -19,8 +19,8 @@ bind f exec /home/guru/bin/rp-run-or-raise.sh Firefox firefox
 alias most-frecent-book exec /home/guru/bin/rp-run-or-raise.sh Zathura "fasd -e zathura -f pdf"
 bind b most-frecent-book
 bind e exec /home/guru/bin/rp-run-or-raise.sh jetbrains-studio /opt/android-studio/bin/studio.sh
-#alias term-most-frecent-directory exec /home/guru/bin/rp-run-or-raise.sh Lxterminal 'lxterminal --working-directory="$(fasd -d -n1)"'
-alias term-most-frecent-directory exec /home/guru/bin/rp-run-or-raise.sh Lxterminal lxterminal
+alias term-most-frecent-directory exec /home/guru/bin/rp-run-or-raise.sh Lxterminal /home/guru/bin/open-frecent-directory-term.sh
+#alias term-most-frecent-directory exec /home/guru/bin/rp-run-or-raise.sh Lxterminal lxterminal
 bind c term-most-frecent-directory
 bind C exec Eterm
 
