--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "comma-dangle":["error","always-multiline"]
     }
 }
