--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,8 @@
 
         "indent": [
             "error",
-            4
+            4,
+            {"SwitchCase" : 1}
         ],
         "linebreak-style": [
             "error",
