Hyper key again

--- a/.ratpoisonrc
+++ b/.ratpoisonrc
@@ -3,7 +3,8 @@ msgwait 2
 
 exec xrandr --output DVI-0 --rotate left
 # somehow the configuration in xessionrc doesn't get executed
-exec  xmodmap /home/guru/.xmodmaprc 
+# it seems to get executed now so I comment the following line
+#exec  xmodmap /home/guru/.xmodmaprc 
 exec xbindkeys &
 
 alias random-wallpaper exec feh --randomize --recursive --bg-scale ~/wp
@@ -24,8 +25,8 @@ bind B second-most-frecent-book
 bind e exec /home/guru/bin/rp-run-or-raise.sh jetbrains-studio /opt/android-studio/bin/studio.sh
 alias term-most-frecent-directory exec /home/guru/bin/rp-run-or-raise.sh Lxterminal /home/guru/bin/open-frecent-directory-term.sh
 #alias term-most-frecent-directory exec /home/guru/bin/rp-run-or-raise.sh Lxterminal lxterminal
-bind c term-most-frecent-directory
-bind C exec urxvt
+bind C term-most-frecent-directory
+bind c exec exec /home/guru/bin/rp-run-or-raise.sh URxvt urxvt
 
 
 #exec xmodmap -e 'remove Lock = Caps_Lock' -e 'keysym Caps_Lock = F13' &
