--- a/.ratpoisonrc
+++ b/.ratpoisonrc
@@ -94,3 +94,6 @@ bind KP_6 select 6
 bind KP_7 select 7
 bind KP_8 select 8
 bind KP_9 select 9
+
+alias ramda-console exec urxvt -e /home/guru/bin/ramda-console.sh
+definekey top H-c ramda-console
