--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
         "browser": true,
         "es6": true,
         "node": true,
-        "jasmine" : true
+        "jasmine" : true,
+        "jest" : true
     },
     "extends": ["eslint:recommended",    "plugin:react/recommended"],
     "parser": "babel-eslint",
