--- a/.pythonrc
+++ b/.pythonrc
@@ -1,10 +1,13 @@
 import sys
 from pprint import pprint
 
+from importlib import reload
+
 
 def hook_show(value):
-    if value != None:
+    if value is not None:
         __builtins__._ = value
         pprint(value)
 
 setattr(sys, 'displayhook', hook_show)
+
