--- a/.pythonrc
+++ b/.pythonrc
@@ -3,6 +3,8 @@ from pprint import pprint
 
 from importlib import reload
 import numpy as np
+import pandas as pd
+from pandas import Series, DataFrame
 
 
 def hook_show(value):
