--- a/.ratpoisonrc
+++ b/.ratpoisonrc
@@ -105,3 +105,10 @@ definekey top H-p python-console
 alias borderless set border 0
 bind C-KP_0 borderless
 definekey top C-KP_0 borderless
+
+#alias one-line-vim-slime exec ratpoison -c 'meta Escape' -c 'meta S-v' -c 'meta C-c' -c 'meta C-c'
+#alias one-line-vim-slime exec xdotool key V key Ctrl+c key Ctrl+c
+alias one-line-vim-slime exec /home/guru/bin/exec_vim_slime_one_line.py
+alias one-paragraph-vim-slime exec /home/guru/bin/exec_vim_slime_paragraph.py
+definekey top H-e one-line-vim-slime
+definekey top H-E one-paragraph-vim-slime
