Configure tmux; Make vim edit urls

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,16 @@
-set -g status off
+# set -g status off
+
+# As in Lxterminal  (When we open a new tab it has the same directory)
+# Minor Bug: if we execute `man ...` then without closing the manual we split then the new window is opened with /usr/share/man
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c  "#{pane_current_path}"
+bind c new-window -c  "#{pane_current_path}"
+
+bind C-r source-file ~/.tmux.conf
+
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
+
+bind C-l last-window
