Add some more updates; Improve vim view of subtitle files

--- a/.gitconfig
+++ b/.gitconfig
@@ -8,6 +8,10 @@
 [alias]
     unstage = reset HEAD --
     last = log -1 HEAD
+[merge]
+    tool = vimdiff
+[mergetool]
+    prompt = false
 
 
 [github]
