Unbind o in Tmux configuration to make us remember semi-colon

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,3 +44,7 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 # bind -T copy-mode-vi y send-keys -X copy-pipe "xclip -i -selection clipboard"
 bind -T copy-mode-vi y send-keys -X copy-pipe "xclip -sel clip -i"
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
+
+# to force us to remember semi-colon (which is more appropriate for switching between two)
+# o command has also has the disadvantage that if ctrl was still pressed, it shifts everything around (rotate panes in the window)
+unbind o
