--- a/.ratpoisonrc
+++ b/.ratpoisonrc
@@ -10,6 +10,9 @@ exec xrandr --output DVI-0 --rotate left
 exec unclutter &
 exec xbindkeys &
 
+exec tmuxinator start regular &
+exec tmuxinator start r4ds &
+
 alias random-wallpaper exec feh --randomize --recursive --bg-scale ~/wp
 definekey top Print random-wallpaper
 
@@ -18,18 +21,18 @@ definekey top F13 other
 
 
 bind f exec /home/guru/bin/rp-run-or-raise.sh Firefox firefox
-#bind b exec /home/guru/bin/rp-run-or-raise.sh Zathura zathura
+# bind b exec /home/guru/bin/rp-run-or-raise.sh Zathura zathura
 
 alias most-frecent-book exec /home/guru/bin/rp-run-or-raise.sh Zathura "fasd -e zathura -f pdf"
 alias second-most-frecent-book exec /home/guru/bin/rp-run-or-raise.sh Zathura "fasd -n2 -e zathura -f pdf"
 alias most-recent-book exec /home/guru/bin/rp-run-or-raise.sh Zathura "fasd -e zathura -f pdf -tR"
 bind b most-frecent-book
 bind B second-most-frecent-book
-bind e exec /home/guru/bin/rp-run-or-raise.sh jetbrains-studio /opt/android-studio/bin/studio.sh
+# bind e exec /home/guru/bin/rp-run-or-raise.sh jetbrains-studio /opt/android-studio/bin/studio.sh
 alias term-most-frecent-directory exec /home/guru/bin/rp-run-or-raise.sh Lxterminal /home/guru/bin/open-frecent-directory-term.sh
 #alias term-most-frecent-directory exec /home/guru/bin/rp-run-or-raise.sh Lxterminal lxterminal
 bind C term-most-frecent-directory
-bind c exec exec /home/guru/bin/rp-run-or-raise.sh URxvt /home/guru/bin/open-regular-tmux-session.sh
+bind c exec /home/guru/bin/rp-run-or-raise.sh URxvt /home/guru/bin/open-regular-tmux-session.sh
 
 
 #exec xmodmap -e 'remove Lock = Caps_Lock' -e 'keysym Caps_Lock = F13' &
@@ -87,6 +90,14 @@ bind a show-date-time
 definekey top s-Right sselect 1
 definekey top s-Left sselect 0
 
+alias reader-page-up exec /home/guru/bin/reader_page_up.sh
+alias reader-page-down exec /home/guru/bin/reader_page_down.sh
+
+definekey top s-Up reader-page-up
+definekey top s-Down reader-page-down
+
+
+
 set fwcolor limegreen
 
 bind r exec xdotool key Ctrl+F5
@@ -112,7 +123,7 @@ definekey top H-p python-console
 
 alias borderless set border 0
 bind C-KP_0 borderless
-definekey top C-KP_0 borderless
+kefinekey top C-KP_0 borderless
 
 #alias one-line-vim-slime exec ratpoison -c 'meta Escape' -c 'meta S-v' -c 'meta C-c' -c 'meta C-c'
 #alias one-line-vim-slime exec xdotool key V key Ctrl+c key Ctrl+c
@@ -127,3 +138,6 @@ bind v select-video
 # use it with R graphs
 alias select-graph select R_x11
 bind g select-graph
+
+alias open-recent-books-menu exec /home/guru/bin/open-with-book-reader.sh
+bind C-b open-recent-books-menu
