--- a/.ratpoisonrc
+++ b/.ratpoisonrc
@@ -23,7 +23,7 @@ definekey top F13 other
 bind f exec /home/guru/bin/rp-run-or-raise.sh Firefox firefox
 # bind b exec /home/guru/bin/rp-run-or-raise.sh Zathura zathura
 
-alias most-frecent-book exec /home/guru/bin/rp-run-or-raise.sh Zathura "fasd -e zathura -f pdf"
+alias most-frecent-book exec /home/guru/bin/rp-run-or-raise.sh Zathura /home/guru/bin/open-frecent-book.sh
 alias second-most-frecent-book exec /home/guru/bin/rp-run-or-raise.sh Zathura "fasd -n2 -e zathura -f pdf"
 alias most-recent-book exec /home/guru/bin/rp-run-or-raise.sh Zathura "fasd -e zathura -f pdf -tR"
 bind b most-frecent-book
