Open second most frecent pdf with minimum number of pages criterion

--- a/.ratpoisonrc
+++ b/.ratpoisonrc
@@ -24,7 +24,7 @@ bind f exec /home/guru/bin/rp-run-or-raise.sh Firefox firefox
 # bind b exec /home/guru/bin/rp-run-or-raise.sh Zathura zathura
 
 alias most-frecent-book exec /home/guru/bin/rp-run-or-raise.sh Zathura /home/guru/bin/open-frecent-book.sh
-alias second-most-frecent-book exec /home/guru/bin/rp-run-or-raise.sh Zathura "fasd -n2 -e zathura -f pdf"
+alias second-most-frecent-book exec /home/guru/bin/rp-run-or-raise.sh Zathura "/home/guru/bin/open-frecent-book.sh 1"
 alias most-recent-book exec /home/guru/bin/rp-run-or-raise.sh Zathura "fasd -e zathura -f pdf -tR"
 bind b most-frecent-book
 bind B second-most-frecent-book
