--- a/.ratpoisonrc
+++ b/.ratpoisonrc
@@ -143,3 +143,6 @@ bind g select-graph
 
 alias open-recent-books-menu exec /home/guru/bin/open-with-book-reader.sh
 bind C-b open-recent-books-menu
+alias open-recent-media-menu exec /home/guru/bin/open-with-vlc.sh
+bind C-v open-recent-media-menu
+definekey top XF86HomePage open-recent-media-menu
