--- a/.inputrc
+++ b/.inputrc
@@ -1,5 +1,8 @@
 "\C-xk": kill-region
 
+# go back WORD. (taking only into account space". The \eb\ef it to escape any space near the point where we issue the command that could befuddle the macro
+"\eB": "\eb\ef\e\C-] \C-f"
+
 # Found in Bash manual "Macros that are convenient for shell interaction".
 # Quoted insert for strings (double and single). No need to limit it for Bash. R may profit by it too
 "\C-x\"": "\"\"\C-b"
