--- a/.config/lxterminal/lxterminal.conf
+++ b/.config/lxterminal/lxterminal.conf
@@ -8,7 +8,7 @@ fgcolor=#aaaaaaaaaaaa
 disallowbold=false
 cursorblinks=false
 cursorunderline=false
-audiblebell=false
+audiblebell=true
 tabpos=top
 hidescrollbar=true
 hidemenubar=true
