--- a/.ratpoisonrc
+++ b/.ratpoisonrc
@@ -26,7 +26,8 @@ bind f exec /home/guru/bin/rp-run-or-raise.sh Firefox firefox
 definekey top H-f exec firefox -private
 # bind b exec /home/guru/bin/rp-run-or-raise.sh Zathura zathura
 
-alias most-frecent-book exec /home/guru/bin/rp-run-or-raise.sh Zathura /home/guru/bin/open-frecent-book.sh
+# alias most-frecent-book exec /home/guru/bin/rp-run-or-raise.sh Zathura /home/guru/bin/open-frecent-book.sh
+alias most-frecent-book exec /home/guru/bin/rp-run-or-raise.sh Zathura "/home/guru/bin/orfalgen pdf zathura"
 alias second-most-frecent-book exec /home/guru/bin/rp-run-or-raise.sh Zathura "/home/guru/bin/open-frecent-book.sh 1"
 alias most-recent-book exec /home/guru/bin/rp-run-or-raise.sh Zathura "fasd -e zathura -f pdf -tR"
 bind b most-frecent-book
