Differentiate active window to let eyes focus without lag

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,10 @@ set -g status off
 #As in ratpoison (showing time with dmesg), the status bar is shown briefly
 bind a run-shell "tmux set-option status on; sleep 2; tmux set-option status off;"
 
+# Whenever there is white text it's slightly grayed to distinguish active vs inactive windows. Transparency is not sacrificed.
+set -g window-style 'fg=colour247,bg=default'
+set -g window-active-style 'fg=colour015,bg=default'
+
 # # To set transparent status bar
 # set -g status-bg default
 # # By setting only current windows style bg to transparent (default) we can get a tab-like appearance.
